--- a/IfInjectorTest/IfInjectorTest.csproj
+++ b/IfInjectorTest/IfInjectorTest.csproj
@@ -87,5 +87,6 @@
     <Folder Include="comprop\" />
     <Folder Include="Bindings\" />
     <Folder Include="Bindings\Config\" />
+    <Folder Include="Util\" />
   </ItemGroup>
 </Project>
