Refactor implicits out of core injector logic. Partial add of qualifiers.

--- a/IfInjector/IfInjector.csproj
+++ b/IfInjector/IfInjector.csproj
@@ -91,6 +91,7 @@ Distinguishing features are small size, speed and attribute based configuration.
     <Compile Include="source\Resolver\IBindingResolver.cs" />
     <Compile Include="source\Resolver\GenericBindingResolver.cs" />
     <Compile Include="source\Resolver\ImplicitBindingResolver.cs" />
+    <Compile Include="source\Bindings\Config\BindingAttributeUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
